# project_c

./: hello.cc  hello.h  main  main.cc  readme.txt  serial  serial.cc  serial.sh
10.12_data_processing/: CMakeCache.txt  CMakeLists.txt  DataProcess  Makefile  Tool.cc  cmake_install.cmake  config.txt  data.txt  main.cc  padConf.txt  readme.txt
10.12_data_processing/__MACOSX/: ._padConf.txt  ._synopsis.xlsx
10.12_data_processing/base/: base_%全部%%动词-关闭%%房间名%_动作_语义残缺_266.json  base_%全部%%动词-关闭%_动作_语义残缺_528.json  base_%全部%%动词-打开%%房间名%_动作_语义残缺_230.json  base_%全部%%动词-打开%%选择词-肯定%%房间名%_动作_语义残缺_6.json  base_%全部%%动词-打开%%选择词-肯定%_动作_语义残缺_228.json  base_%全部%%动词-打开%_动作_语义残缺_526.json  base_%全部%%动词-点亮%%房间名%_动作_语义残缺_204.json  base_%全部%%动词-点亮%%选择词-肯定%%房间名%_动作_语义残缺_12.json  base_%全部%%动词-点亮%%选择词-肯定%_动作_语义残缺_198.json  base_%全部%%动词-点亮%_动作_语义残缺_524.json  base_%全部%%动词-熄灭%%房间名%_动作_语义残缺_192.json  base_%全部%_动作_语义残缺_618.json  base_%动词-关到%%房间名%_动作_语义残缺_518.json  base_%动词-关到%%设备名-窗帘%%房间名%_动作_语义残缺_174.json  base_%动词-关到%%设备名-窗帘%_动作_语义残缺_516.json  base_%动词-关到%_动作_语义残缺_614.json  base_%动词-关闭%%房间名%_动作_语义残缺_508.json  base_%动词-关闭%%选择词-肯定%%房间名%_动作_语义残缺_134.json  base_%动词-关闭%%选择词-肯定%_动作_语义残缺_502.json  base_%动词-关闭%_动作_语义残缺_610.json  (+291 more)
10.13_data_processing/: Tool.cc  data.txt  main  main.cc
Udpsocket/: Client  Service  UdpSocketClient.cc  UdpSocketService.cc
airkiss/wifi/: CMakeCache.txt  CMakeLists.txt  Main  Makefile  build.sh  cmake_install.cmake  env.sh  wifi_config.c  wlan.sh  wlan_force.sh  编译方式
airkiss/wifi/branch_16K/: Android.mk  Makefile  out.pcm  test_wav.txt
airkiss/wifi/branch_16K/include/: Klog.h  _kiss_fft_guts.h  adt.h  common.h  decode.h  encode.h  kiss_fft.h  rscode.h
airkiss/wifi/branch_16K/src/: common.c  decode.c  encode.c  kiss_fft.c  rscode.c
airkiss/wifi/capture/: linux.c
airkiss/wifi/doc/: .~lock.wifi配网库使用说明.docx#  wifi配网库使用说明.docx
airkiss/wifi/include/: airkiss.h  bsa_hs_api.h  librokid-bt.h
airkiss/wifi/lib/: libbluetooth.so.3.18.16  libdbus-1.so.3  libglib-2.0.so.0.5000.3  libncursesw.so.5.9  libreadline.so.6.3
airkiss/wifi/src/: airkiss_src.c  airkiss_src.h  api_net_config.c  api_net_config.h  bt_src.c  bt_src.h  kfifo.c  kfifo.h  wav_src.c  wav_src.h
airkiss/wifi/utils/: wifi_scan.h
c_test/: a.out  main.cc
callbackTest/: a.out  main.cc
daemon/: senseflow_daemon.cc
encryption/: Encry  a.out  encryptedfile.txt  encryption.cc  sourcefile.txt
fd_dp/: CMakeCache.txt  CMakeLists.txt  Main  Makefile  Tool.cc  Tool.h  cmake_install.cmake  events2chars.cc  events2chars.h  fd_config.cc  fd_config.h  fd_dp.cc  fd_dp.h  fd_intent_npu.cc  fd_intent_npu.h  fd_log.cc  fd_log.h  fd_resource.cc  fd_resource.h  fd_slot_npu.cc  fd_slot_npu.h  serialManager.cc  serialManager.h
gpio_test/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  gpio  gpio_test.cc
hex/: a.out  main.cc
httpTest/: filter.h  main.cc  spider.cc  spider.h
jsonTest/: Main  a.out  index2gpio.json  intent_config.json  main  main.cc  serial_IO_config.json
logTest/: a.out  log.cc  minicom.txt
memoryTest/: cache_log.txt  fd_log.cc  fd_log.h  log.txt  main  memleak  memleak.cc  test.sh
my_utils/: a.out  file_io.cc
mysql_test/: main  main.cc
serialConfig/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
serialConfig/production/: SerialConfig  config.conf
serialConfig/res/: Tool.cc  Tool.h  fd_config.cc  fd_config.h  fd_gpio.cc  fd_gpio.h  fd_log.cc  fd_log.h  fd_protocol.cc  fd_protocol.h  fd_strformat.cc  fd_strformat.h  main.cc
serialTest2/: a.out  main.cc  serial.cc  serial.h
serial_util/: CMakeLists.txt  main.cc
shareMemory/: Makefile  fd_share_memory.cc  mainRead.cc  mainWrite.cc
sqlite3_test/: Tool.h  fd_database.db  main  main.cc  memTest
struct_test/: a.out  main.c
test/: a.out  main  main.cc
test2/: a.out  main.c
write_test/: a.out  file1.txt  out.txt  write.cc
(+20240 files in other folders)
